# fusion-lite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  fusion-lite  pyproject.toml
.github/workflows/: ci.yml
examples/: website-profile-judge.md
fusion_lite/: __init__.py  adapters.py  cli.py  prompts.py
fusion_lite/panels/: cheap.json  code.json  default.json  openai-free-daily-code.json  openai-free-daily.json  openrouter-budget.json  openrouter-thrift.json  research.json
panels/: fable.json  hybrid-budget.json  openai-free-daily.json  openrouter-free-opinion.json
scripts/: release_version.py  validate_release.py
