[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-lite"
version = "0.1.1"
description = "Local fusion-style multi-model panels that let existing CLI and API subscriptions do the heavy lifting."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Martin Moeller" }
]
keywords = [
  "ai",
  "cli",
  "codex",
  "claude",
  "llm",
  "multi-model",
  "openrouter"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/martinmoellerbiz/fusion-lite"
Issues = "https://github.com/martinmoellerbiz/fusion-lite/issues"

[project.scripts]
fusion-lite = "fusion_lite.cli:main"

[tool.setuptools]
packages = ["fusion_lite"]
include-package-data = true

[tool.setuptools.package-data]
fusion_lite = ["panels/*.json"]
